--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 		</div>
 		<!-- Display winner popup -->
 		<div class="winner-banner hide">
-			<div class="message">You won!</div>
+			<div class="message"></div>
 			<button class="replay">Replay</button>
 		</div>
 	</body>
