UI color, background, text and border changes

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<title>Battleship</title>
 	</head>
-	<body class="bg-dark font-sans">
+	<body class="font-sans">
 		<!-- Header -->
 		<header> <h1>Battleship</h1> </header>
 		<!-- Information display popup -->
